@@ -96,11 +96,19 @@ AnswerType(SEXP x, int recurse, int usenames, struct BindData *data, SEXP call)
 	data->ans_flags |= 128;
 	data->ans_length += XLENGTH(x);
 	break;
+
+#ifdef DO_C_Symbol
+/* new case : */
+    case SYMSXP:
+    case LANGSXP:
+	data->ans_flags |= 512; /* as.expression() implicitly */
+	data->ans_length += 1;
+	break;
+#endif
     case VECSXP:
     case EXPRSXP:
 	if (recurse) {
-	    R_xlen_t i, n;
-	    n = xlength(x);
+	    R_xlen_t i, n = xlength(x);
 	    if (usenames && !data->ans_nnames &&
 		!isNull(getAttrib(x, R_NamesSymbol)))
 		data->ans_nnames = 1;
@@ -371,7 +379,7 @@ RealAnswer(SEXP x, struct BindData *data, SEXP call)
 static void
 ComplexAnswer(SEXP x, struct BindData *data, SEXP call)
 {
-    R_xlen_t i; 
+    R_xlen_t i;
     int xi;
     switch(TYPEOF(x)) {
     case NILSXP:
@@ -824,7 +832,7 @@ SEXP attribute_hidden do_c_dflt(SEXP call, SEXP op, SEXP args, SEXP env)
 SEXP attribute_hidden do_unlist(SEXP call, SEXP op, SEXP args, SEXP env)
 {
     SEXP ans, t;
-    int mode, recurse, usenames;
+    int mode;
     R_xlen_t i, n = 0;
     struct BindData data;
     struct NameData nameData;
@@ -842,8 +850,9 @@ SEXP attribute_hidden do_unlist(SEXP call, SEXP op, SEXP args, SEXP env)
     /* by an optional "recursive" argument. */
 
     PROTECT(args = CAR(ans));
-    recurse = asLogical(CADR(ans));
-    usenames = asLogical(CADDR(ans));
+    int recurse = asLogical(CADR(ans));
+    int usenames = asLogical(CADDR(ans));
+    int lenient = TRUE; // was (implicitly!) FALSE  up to R 3.0.1
 
     /* Determine the type of the returned value. */
     /* The strategy here is appropriate because the */
@@ -874,7 +883,7 @@ SEXP attribute_hidden do_unlist(SEXP call, SEXP op, SEXP args, SEXP env)
     }
     else {
 	UNPROTECT(1);
-	if (isVector(args)) return args;
+	if (lenient || isVector(args)) return args;
 	else error(_("argument not a list"));
     }
 
@@ -1092,9 +1101,11 @@ SEXP attribute_hidden do_bind(SEXP call, SEXP op, SEXP args, SEXP env)
     case RAWSXP:
 	break;
 	/* we don't handle expressions: we could, but coercion of a matrix
-	   to an expression is not ideal */
+	   to an expression is not ideal.
+	   FIXME?  had  cbind(y ~ x, 1) work using lists, before */
     default:
-	error(_("cannot create a matrix from these types"));
+	error(_("cannot create a matrix from type '%s'"),
+	      type2char(mode));
     }
 
     if (PRIMVAL(op) == 1)
@@ -1297,7 +1308,7 @@ static SEXP cbind(SEXP call, SEXP args, SEXPTYPE mode, SEXP rho,
 		else if (TYPEOF(u) == REALSXP) {
 		    for (i = 0; i < idx; i++)
 			REAL(result)[n++] = REAL(u)[i % k];
-		} 
+		}
 		else { /* RAWSXP */
 		    /* FIXME: I'm not sure what the author intended when the sequence was
 		       defined as raw < logical -- it is possible to represent logical as
